<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/apphome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:gravity="fill"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AppHome" >

    <TextView
        android:id="@+id/stepDesctxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:drawableLeft="@drawable/feet"
        android:drawablePadding="20dp"
        android:text="@string/App_Home"
        android:textColor="#FFD12A"
        android:textSize="60sp" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/backtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/back"
            android:gravity="center_vertical"
            android:text="@string/back" />

        <TextView
            android:id="@+id/taptxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="fill_horizontal"
            android:text="@string/tap"
            android:textColor="#FFD12A" />

        <TextView
            android:id="@+id/wantThistxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/i_want_this" />

        <TextView
            android:id="@+id/taptaptxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="fill_horizontal"
            android:text="@string/tap_tap"
            android:textColor="#FFD12A" />

        <TextView
            android:id="@+id/needHelptxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/i_need_help" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stepDesctxt"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/welcome"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtUniqueLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/txtWelcome"
            android:text="@string/UniqueLogin"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/loginInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtWelcome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:visibility="invisible" >

            <TextView
                android:id="@+id/loginTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/loginTxt"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/loginInput"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/loginTxt"
                android:inputType="text"
                android:text="@string/loginInput"
                android:textSize="20sp" />
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/btn_default"
        android:text="@string/Login"
        android:visibility="invisible" />

</RelativeLayout>