<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000"
    tools:context=".EmergencyActivity" >

    <TextView
        android:id="@+id/thankYoutxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/thank_you"
        android:textColor="#FFF"
        android:textSize="48sp" />
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/nxtChoicetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/next_choice"
            android:gravity="center_vertical"
            android:text="@string/nextChoice" />

        <TextView
            android:id="@+id/backtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/back"
            android:gravity="center_vertical"
            android:text="@string/back" />

        <TextView
            android:id="@+id/taptxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="fill_horizontal"
            android:text="@string/tap"
            android:textColor="#FFD12A" />

        <TextView
            android:id="@+id/wantThistxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/i_want_this" />

        <TextView
            android:id="@+id/taptaptxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="fill_horizontal"
            android:text="@string/tap_tap"
            android:textColor="#FFD12A" />

        <TextView
            android:id="@+id/needHelptxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/i_need_help" />

    </LinearLayout>

</RelativeLayout>
